<resources>
    <string name="app_name">Stream Replay</string>
    <string name="label_manifest_file">Manifest File</string>
    <string name="label_duration">Duration (seconds)</string>
    <string name="label_ipc_port">IPC Port Number</string>
    <string name="label_server_ip">Server IP</string>
    <string name="label_target1">Target Link 1 (Tx / Rx)</string>
    <string name="label_target2">Target Link 2 (Tx / Rx)</string>
    <string name="label_video_format">Format</string>
    <string name="label_video_resolution">Resolution</string>
    <string name="label_video_bitrate">Bitrate</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>

    <string-array name="options_protocols">
        <item>TCP</item>
        <item>UDP</item>
    </string-array>

    <string-array name="options_format_keys">
        <item>VP8</item>
        <item>H264</item>
    </string-array>

    <string-array name="options_format_values">
        <item>video/avc</item>
        <item>video/x-vnd.on2.vp8</item>
    </string-array>

    <string-array name="options_resolution_keys">
        <item>Native</item>
        <item>1200x2664 @ 320</item>
        <item>1920x1080 @ 320</item>
        <item>1280x720 @ 320</item>
        <item>800x480 @ 160</item>
        <item>640x360 @ 96</item>
    </string-array>

    <string-array name="options_resolution_values">
        <item>0,0,0</item>
        <item>1200,2664,320</item>
        <item>1920,1080,320</item>
        <item>1280,720,320</item>
        <item>800,480,160</item>
        <item>640,360,96</item>
    </string-array>

    <string-array name="options_bitrate_keys">
        <item>20 Mbps</item>
        <item>4 Mbps</item>
        <item>2 Mbps</item>
    </string-array>

    <integer-array name="options_bitrate_values">
        <item>20480000</item>
        <item>4096000</item>
        <item>2048000</item>
    </integer-array>
</resources>
