<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.magicsih.androidscreencaster.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_genera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="General" />

                <TextView
                    android:id="@+id/textView_ipc_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ipc_port" />

                <EditText
                    android:id="@+id/editText_ipc_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="11112"
                    tools:text="11112" />

                <TextView
                    android:id="@+id/textView_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_duration" />

                <EditText
                    android:id="@+id/editText_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:text="30"
                    tools:text="30" />

                <View
                    android:id="@+id/divider_general"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView_tx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TX Parameters" />

                <TextView
                    android:id="@+id/textView_manifest_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_manifest_file" />

                <Spinner
                    android:id="@+id/spinner_manifest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_target1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_target1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_target1_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:text="127.0.0.1"
                        tools:text="127.0.0.1" />

                    <EditText
                        android:id="@+id/editText_target1_rx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="127.0.0.1"
                        tools:text="127.0.0.1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_target2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_target2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_target2_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:text="127.0.0.1"
                        tools:text="127.0.0.1" />

                    <EditText
                        android:id="@+id/editText_target2_rx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="127.0.0.1"
                        tools:text="127.0.0.1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_video_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_video_format" />

                <Spinner
                    android:id="@+id/spinner_video_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/options_format_keys" />

                <TextView
                    android:id="@+id/textView_video_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_video_resolution" />

                <Spinner
                    android:id="@+id/spinner_video_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/options_resolution_keys" />

                <TextView
                    android:id="@+id/textView_video_bitrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_video_bitrate" />

                <Spinner
                    android:id="@+id/spinner_video_bitrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/options_bitrate_keys" />

                <View
                    android:id="@+id/divider_tx"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView_rx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="RX Parameters" />

                <TextView
                    android:id="@+id/textView_rx_ports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RX Ports" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox_rtt1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="calc_rtt" />

                            <CheckBox
                                android:id="@+id/checkBox_rx1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="rx_mode" />

                            <EditText
                                android:id="@+id/editText_rx1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="RX Port 1"
                                android:inputType="numberDecimal" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox_rtt2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="calc_rtt" />

                            <CheckBox
                                android:id="@+id/checkBox_rx2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="rx_mode" />

                            <EditText
                                android:id="@+id/editText_rx2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="center|center_vertical"
                                android:hint="RX Port 2"
                                android:inputType="numberDecimal" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox_rtt3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="calc_rtt" />

                            <CheckBox
                                android:id="@+id/checkBox_rx3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="rx_mode" />

                            <EditText
                                android:id="@+id/editText_rx3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="center|center_vertical"
                                android:hint="RX Port 3"
                                android:inputType="numberDecimal" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox_rtt4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="calc_rtt" />

                            <CheckBox
                                android:id="@+id/checkBox_rx4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="rx_mode" />

                            <EditText
                                android:id="@+id/editText_rx4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="center|center_vertical"
                                android:hint="RX Port 4"
                                android:inputType="numberDecimal" />
                        </LinearLayout>

                    </TableRow>
                </TableLayout>

                <androidx.media3.ui.PlayerView android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    app:show_shuffle_button="false"
                    app:show_subtitle_button="false"/>

            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Tx" />

            <CheckBox
                android:id="@+id/checkBox_rx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rx" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/action_start"
                android:textOn="@string/action_stop" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
